<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/book">
    <!--Layout for question and answers -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="363dp"
        android:orientation="horizontal">
        <!--        Question View-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="75sp"
            android:layout_marginLeft="75sp"
            android:layout_marginTop="75sp"
            android:layout_marginBottom="100sp"
            android:text="@string/question"
            android:textSize="25sp" />
        <!--        Answer buttons layout-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="100sp"
            android:layout_marginTop="50sp"
            android:layout_marginRight="50sp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginStart="100sp"
            android:layout_marginEnd="50sp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:text="@string/ans_a" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:text="@string/ans_b" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:text="@string/ans_c" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:text="@string/ans_d" />
        </LinearLayout>
    </LinearLayout>
<!--    layout for the score and game label (Where the game is being played)-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25sp"
            android:layout_marginLeft="25sp"
            android:text="@string/library_tag"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="550sp"
            android:layout_marginLeft="550sp"
            android:text="@string/score_tag"
            android:textSize="15sp" />

    </LinearLayout>
</LinearLayout>